--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+    <p>All info is gatered from the below link. Purpose of this is to make it more visible when dealing with this type of information. Untill now it only contains info for the 36 first bytes.</p>
     <p>https://www.win.tue.nl/~aeb/linux/fs/fat/fat-1.html</p>
 
 
