--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <td><span class="tooltip">90<span class="tooltiptext">Bytes: 0-2 <br>Offset: 0x02 <br>Purpose: Assembly
                             code instructions to jump to boot code (mandatory in bootable partition)</span></span>
                 </td>
-                <td><span class="tooltip">49<span class="tooltiptext">Bytes: 3-10<br>Offset: 0x03<br>Purpose: OEM name in ASCII</span></td>
-                <td><span class="tooltip">42<span class="tooltiptext">Bytes: 3-10<br>Offset: 0x04<br>Purpose: OEM name in ASCII</span></td>
+                <td><span class="tooltip OEM">49<span class="tooltiptext">Bytes: 3-10<br>Offset: 0x03<br>Purpose: OEM name in ASCII</span></td>
+                <td><span class="tooltip OEM">42<span class="tooltiptext">Bytes: 3-10<br>Offset: 0x04<br>Purpose: OEM name in ASCII</span></td>
                 <td><span class="tooltip">4d<span class="tooltiptext">Bytes: 3-10<br>Offset: 0x05<br>Purpose: OEM name in ASCII</span></td>
                 <td><span class="tooltip">20<span class="tooltiptext">Bytes: 3-10<br>Offset: 0x06<br>Purpose: OEM name in ASCII</span></td>
                 <td><span class="tooltip">20<span class="tooltiptext">Bytes: 3-10<br>Offset: 0x07<br>Purpose: OEM name in ASCII</span></td>
@@ -678,6 +678,7 @@
             </tr>
         </tbody>
     </table>
+    <script src="javascript.js"></script>
 </body>
 
 </html>
