--- a/index.html
+++ b/index.html
@@ -203,22 +203,22 @@
             </tr>
             <tr>
                 <td class="offset">000070</td>
-                <td><span class="tooltip">89<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></span></td>
-                <td><span class="tooltip">46<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></span></td>
-                <td><span class="tooltip">24<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></span></td>
-                <td><span class="tooltip">8a<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></span></td>
-                <td><span class="tooltip">46<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></span></td>
-                <td><span class="tooltip">10<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></span></td>
-                <td><span class="tooltip">f7<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></span></td>
-                <td><span class="tooltip">66<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></span></td>
-                <td><span class="tooltip">16<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></span></td>
-                <td><span class="tooltip">03<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></span></td>
-                <td><span class="tooltip">46<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></span></td>
-                <td><span class="tooltip">0e<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></span></td>
-                <td><span class="tooltip">83<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></span></td>
-                <td><span class="tooltip">d2<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></span></td>
-                <td><span class="tooltip">00<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></span></td>
-                <td><span class="tooltip">8b<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></span></td>
+                <td><span class="tooltip">89<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
+                <td><span class="tooltip">46<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
+                <td><span class="tooltip">24<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
+                <td><span class="tooltip">8a<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
+                <td><span class="tooltip">46<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
+                <td><span class="tooltip">10<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
+                <td><span class="tooltip">f7<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
+                <td><span class="tooltip">66<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
+                <td><span class="tooltip">16<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
+                <td><span class="tooltip">03<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
+                <td><span class="tooltip">46<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
+                <td><span class="tooltip">0e<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
+                <td><span class="tooltip">83<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
+                <td><span class="tooltip">d2<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
+                <td><span class="tooltip">00<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
+                <td><span class="tooltip">8b<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
             </tr>
             <tr>
                 <td class="offset">000080</td>
