--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 <td><span class="tooltip">0c<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
                 <td><span class="tooltip">77<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
                 <td><span class="tooltip">05<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
-                <td><span class="tooltip">c7<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></</span>td>
+                <td><span class="tooltip">c7<span class="tooltiptext">Bytes: <br>Offset: 0x<br>Purpose: </span></span></td>
             </tr>
             <tr>
                 <td class="offset">0000a0</td>
