--- a/index.html
+++ b/index.html
@@ -10,13 +10,8 @@
 </head>
 
 <body>
-    <p>https://www.win.tue.nl/~aeb/linux/fs/fat/fat-1.html</p>
 
-
-
-    <h1>Boot-sector of a DRDOS boot floppy</h1>
-    <h3>In linux terms, this is called the superblock</h3>
-    <h5>Consists of the first 512 bytes</h5>
+    <h1>Boot-sector ("superblock") of a DRDOS boot floppy</h1>
 
     <ul>
         <li>Endianess: Little endian</li>
@@ -1387,6 +1382,8 @@
     <ul>
         <li></li>
     </ul>
+    <p>https://www.win.tue.nl/~aeb/linux/fs/fat/fat-1.html</p>
+
 
     <script src="javascript.js"></script>
 </body>
